k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: airbnb-frontend
  namespace: airbnb-welcome
spec:
  replicas: 1
  selector:
    matchLabels:
      app: airbnb-frontend
  template:
    metadata:
      labels:
        app: airbnb-frontend
    spec:
      containers:
        - name: frontend
          image: hadensmith/airbnb-welcome-frontend:cda9b07addb826090ac78e27fb95ce85cf2fb579
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 20
