k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: airbnb-backend
  namespace: airbnb-welcome
spec:
  type: ClusterIP
  selector:
    app: airbnb-backend
  ports:
    - port: 8000
      targetPort: 8000
