k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: airbnb-welcome-ingress
  namespace: airbnb-welcome
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: airbnb-backend
                port:
                  number: 8000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: airbnb-frontend
                port:
                  number: 80
